tasks now show based on the user that is logged in

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,3 +12,7 @@ fos_user:
 tasks:
     resource: "@TaskBundle/Controller/TaskController.php"
     type:     annotation
+
+homepage:
+    pattern:  /
+    defaults: { _controller: TaskBundle:Default:index }
