--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -16,3 +16,7 @@ tasks:
 homepage:
     pattern:  /
     defaults: { _controller: TaskBundle:Default:index }
+
+admin:
+    pattern: /admin
+    defaults: { _controller: TaskBundle:Default:admin }
